added pairwise distance matrix construction to point cloud comparisons

--- a/Regression/all_features.ipynb
+++ b/Regression/all_features.ipynb
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f762bf09",
+   "id": "c6594bbf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5a363cad",
+   "id": "ef8b889c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,23 +226,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "5e822eab",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\npipes = []\\nfor model in [LinearRegression(), xgb.XGBRegressor(random_state=2)]:\\n    X = df.drop(columns=['total_awards_received', 'num_comments'])\\n    y = df.ups\\n    pipes.append(run_experiment(model, X, y))\\n\""
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "def run_experiment(model, X, y):\n",
@@ -251,6 +240,11 @@
     "    X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
     "                                                    random_state=1)\n",
     "\n",
+    "    \n",
+    "    clf = DummyRegressor()\n",
+    "    scores = cross_val_score(clf, X, y)\n",
+    "    print(\"Dummy classifier score: %0.3f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))\n",
+    " \n",
     "    print(\"working on\", model)\n",
     "\n",
     "    pipe = make_pipeline(all_features, model, verbose = True)\n",
@@ -265,18 +259,20 @@
     "    sns.scatterplot(x = pipe.predict(X_train), y = y_train)\n",
     "    plt.show()\n",
     "    \n",
-    "    scores = cross_val_score(pipe, X, y)\n",
-    "    print(scores)\n",
+    "    score = cross_val_score(pipe, X, y)\n",
+    "    print(score)\n",
     "    \n",
-    "    return pipe\n",
+    "    return pipe, score\n",
     "\n",
-    "'''\n",
+    "\n",
     "pipes = []\n",
+    "scores = []\n",
     "for model in [LinearRegression(), xgb.XGBRegressor(random_state=2)]:\n",
     "    X = df.drop(columns=['total_awards_received', 'num_comments'])\n",
     "    y = df.ups\n",
-    "    pipes.append(run_experiment(model, X, y))\n",
-    "'''"
+    "    pipe, score = run_experiment(model, X, y)\n",
+    "    pipes.append(pipe)\n",
+    "    scores.append(score)"
    ]
   },
   {
@@ -293,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "38b42962",
    "metadata": {},
    "outputs": [
@@ -301,7 +297,156 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "working on DecisionTreeClassifier()\n"
+      "working on DecisionTreeClassifier()\n",
+      "[Pipeline] ...... (step 1 of 2) Processing featureunion, total= 8.4min\n",
+      "[Pipeline]  (step 2 of 2) Processing decisiontreeclassifier, total=   0.4s\n",
+      "Dummy classifier score: 0.929 (+/- 0.00)\n",
+      "[Pipeline] ...... (step 1 of 2) Processing featureunion, total= 7.6min\n",
+      "[Pipeline]  (step 2 of 2) Processing decisiontreeclassifier, total=   0.3s\n",
+      "[Pipeline] ...... (step 1 of 2) Processing featureunion, total= 8.2min\n",
+      "[Pipeline]  (step 2 of 2) Processing decisiontreeclassifier, total=   0.5s\n",
+      "[Pipeline] ...... (step 1 of 2) Processing featureunion, total= 6.7min\n",
+      "[Pipeline]  (step 2 of 2) Processing decisiontreeclassifier, total=   0.3s\n",
+      "[Pipeline] ...... (step 1 of 2) Processing featureunion, total= 7.7min\n",
+      "[Pipeline]  (step 2 of 2) Processing decisiontreeclassifier, total=   0.4s\n",
+      "[Pipeline] ...... (step 1 of 2) Processing featureunion, total= 9.0min\n",
+      "[Pipeline]  (step 2 of 2) Processing decisiontreeclassifier, total=   0.5s\n",
+      "Model classifier score: 0.877 (+/- 0.03)\n",
+      "working on LogisticRegression()\n",
+      "[Pipeline] ...... (step 1 of 2) Processing featureunion, total= 9.2min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Pipeline]  (step 2 of 2) Processing logisticregression, total=   0.5s\n",
+      "Dummy classifier score: 0.929 (+/- 0.00)\n",
+      "[Pipeline] ...... (step 1 of 2) Processing featureunion, total=10.5min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Pipeline]  (step 2 of 2) Processing logisticregression, total=   0.4s\n",
+      "[Pipeline] ...... (step 1 of 2) Processing featureunion, total=10.3min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Pipeline]  (step 2 of 2) Processing logisticregression, total=   0.4s\n",
+      "[Pipeline] ...... (step 1 of 2) Processing featureunion, total= 9.3min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Pipeline]  (step 2 of 2) Processing logisticregression, total=   0.4s\n",
+      "[Pipeline] ...... (step 1 of 2) Processing featureunion, total=10.3min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Pipeline]  (step 2 of 2) Processing logisticregression, total=   0.4s\n",
+      "[Pipeline] ...... (step 1 of 2) Processing featureunion, total=16.3min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Pipeline]  (step 2 of 2) Processing logisticregression, total=   0.9s\n",
+      "Model classifier score: 0.922 (+/- 0.01)\n"
      ]
     }
    ],
@@ -332,13 +477,15 @@
     "    print(\"Model classifier score: %0.3f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))\n",
     "    \n",
     "    \n",
-    "    return pipe\n",
+    "    return pipe, scores\n",
     "\n",
     "pipes = []\n",
     "for model in [tree.DecisionTreeClassifier(), LogisticRegression()]: #[LinearRegression(), xgb.XGBRegressor(random_state=2)]:\n",
     "    X = df.drop(columns=['total_awards_received', 'num_comments'] + award_cols)\n",
     "    y = df[\"award_Silver\"] > 0 \n",
-    "    pipes.append(run_experiment_classification(model, X, y))\n"
+    "    pipe, score = run_experiment_classification(model, X, y)\n",
+    "    pipes.append(pipe)\n",
+    "    score.append(score)"
    ]
   },
   {
