added bert stuff

--- a/Feature_Design/sandbox/bert.ipynb
+++ b/Feature_Design/sandbox/bert.ipynb
@@ -44,6 +44,10 @@
    ],
    "source": [
     "\n",
+    "import torch\n",
+    "import transformers as ppb\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "# For DistilBERT:\n",
     "model_class, tokenizer_class, pretrained_weights = (ppb.DistilBertModel, ppb.DistilBertTokenizer, 'distilbert-base-uncased')\n",
     "\n",
@@ -361,7 +365,7 @@
     }
    ],
    "source": [
-    "test_classification(features, df[:cut_off].total_awards_received >= 1, LogisticRegression())"
+    "test_classification(features, df.total_awards_received >= 1, LogisticRegression())"
    ]
   },
   {
