added bayesian changepoint detection

--- a/ExploratoryDataAnalysis/Timeseries.ipynb
+++ b/ExploratoryDataAnalysis/Timeseries.ipynb
@@ -336,7 +336,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "agged = wsb[wsb.ups <= 10][['date', 'ups']].groupby(\"date\").agg(\"sum\")\n"
+    "agged = wsb[wsb.ups <= 10][['date', 'ups']].groupby(\"date\").agg(\"sum\")\n",
+    "fig, ax = plt.subplots(figsize=(15, 9))\n",
+    "sns.scatterplot(ax=ax, data = agged, x = \"date\", y = \"ups\")"
    ]
   },
   {
@@ -368,10 +370,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "fig, ax = plt.subplots(figsize=(15, 9))\n",
-    "sns.scatterplot(ax=ax, data = agged, x = \"date\", y = \"ups\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -420,9 +419,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ML]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ML-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
