--- a/Feature_Design/sandbox/word2vec.ipynb
+++ b/Feature_Design/sandbox/word2vec.ipynb
@@ -3202,9 +3202,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ML]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ML-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
