Update Woolf 50 dims title plus selftext and time.ipynb

--- a/Woolf-Inspired Neural Nets/Woolf 50 dims title plus selftext and time.ipynb
+++ b/Woolf-Inspired Neural Nets/Woolf 50 dims title plus selftext and time.ipynb
@@ -187,7 +187,7 @@
     "minutes = np.array(df.utc.apply(lambda x : x.minute), dtype=int)\n",
     "dayofweeks = np.array(df.utc.apply(lambda x : x.weekday()), dtype=int)\n",
     "dayofyears = np.array(df.utc.apply(lambda x : x.timetuple().tm_yday), dtype=int)\n",
-    "is_top_submission = np.array(df.ups.apply(lambda x : GoodPost(x)), dtype=int)"
+    "is_top_submission = np.array(df.ups.apply(lambda x : GoodPost(x,ups_median)), dtype=int)"
    ]
   },
   {
