cleaned up print statements

--- a/GuidedTour/GuidedTour.ipynb
+++ b/GuidedTour/GuidedTour.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "619a6a87",
+   "id": "2794ca66",
    "metadata": {
     "scrolled": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7611d3a2",
+   "id": "e5ae7740",
    "metadata": {},
    "source": [
     "# Data Scraping\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3152bd11",
+   "id": "1f99a31c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,17 +53,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "082388dd",
+   "id": "677ab5a1",
    "metadata": {},
    "source": [
-    "The next cell will open full.csv , compute the words that are among the top_X on any day, and then run the change point analysis model on each of them."
+    "# Change Point Analysis\n",
+    "\n",
+    "The next cell will open full.csv , compute the words that are among the top_X on any day, and then run the change point analysis model on each of them.\n",
+    "\n",
+    "\n",
+    "The first time this is a run, a cleaned up version of the dataframe will be created for ease of processing.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd7c0cc3",
-   "metadata": {},
+   "id": "06ea1593",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -192,8 +200,73 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='69576' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      49.70% [69576/140000 02:31<02:33 Sampling 4 chains, 0 divergences]\n",
+       "      <progress value='140000' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [140000/140000 05:32<00:00 Sampling 4 chains, 0 divergences]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sampling 4 chains for 5_000 tune and 30_000 draw iterations (20_000 + 120_000 draws total) took 365 seconds.\n",
+      "The rhat statistic is larger than 1.4 for some parameters. The sampler did not converge.\n",
+      "The estimated number of effective samples is smaller than 200 for some parameters.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Change Point Guess 0.8929333333333334\n",
+      "{'change_point_confidence': [0.8929333333333334], 'mus': [(0.004607042872291312, 0.003093764735789145)], 'mu_diff': [-0.0015132781365021666], 'tau_map': ['2020-02-23'], 'tau_std': [160.27163797893084], 'entropy': [3.6485330943990406], 'change_point_guess': [0.8929333333333334]}\n",
+      "appending\n",
+      "working on next\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\Documents\\GitHub\\ErdosInstitute\\ErdosInstitute-SIG_Project\\Automated\\ChangePointAnalysis\\BayesianMethods.py:134: FutureWarning: In v4.0, pm.sample will return an `arviz.InferenceData` object instead of a `MultiTrace` by default. You can pass return_inferencedata=True or return_inferencedata=False to be safe and silence this warning.\n",
+      "  trace = pm.sample(steps, tune=tune, step = step)\n",
+      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "CompoundStep\n",
+      ">Metropolis: [delta]\n",
+      ">Metropolis: [change_point_beta]\n",
+      ">Metropolis: [tau_beta]\n",
+      ">Metropolis: [beta_2]\n",
+      ">Metropolis: [alpha_2]\n",
+      ">Metropolis: [beta_1]\n",
+      ">Metropolis: [alpha_1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "        <style>\n",
+       "            /* Turns off some styling */\n",
+       "            progress {\n",
+       "                /* gets rid of default border in Firefox and Opera. */\n",
+       "                border: none;\n",
+       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "                background-size: auto;\n",
+       "            }\n",
+       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "                background: #F44336;\n",
+       "            }\n",
+       "        </style>\n",
+       "      <progress value='13610' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      9.72% [13610/140000 00:27<04:15 Sampling 4 chains, 0 divergences]\n",
        "    </div>\n",
        "    "
       ],
@@ -214,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8661161b",
+   "id": "5e4fbf7f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -222,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d227282e",
+   "id": "a7cbbf6b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -230,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8d9b10f",
+   "id": "19ebbd4f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -238,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08016ccc",
+   "id": "eb81211f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -246,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a3a6044",
+   "id": "9b0640e8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -254,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff5af91c",
+   "id": "4f44a7d1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -262,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e063581c",
+   "id": "7fa75aea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -270,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f961b26",
+   "id": "fff9d51a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -278,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f14ac7a",
+   "id": "42e8ee57",
    "metadata": {},
    "outputs": [],
    "source": [
