--- a/GuidedTour/GuidedTour.ipynb
+++ b/GuidedTour/GuidedTour.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2794ca66",
+   "id": "4960c3f6",
    "metadata": {
     "scrolled": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5ae7740",
+   "id": "8e087753",
    "metadata": {},
    "source": [
     "# Data Scraping\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f99a31c",
+   "id": "c3aed0c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +53,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "677ab5a1",
+   "id": "61213fa1",
    "metadata": {},
    "source": [
     "# Change Point Analysis\n",
     "\n",
-    "The next cell will open full.csv , compute the words that are among the top_X on any day, and then run the change point analysis model on each of them.\n",
+    "The next cell will open full.csv , compute the words that are among the top daily_words most popular words on any day, and then run the change point analysis model on each of them.\n",
     "\n",
     "\n",
     "The first time this is a run, a cleaned up version of the dataframe will be created for ease of processing.\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06ea1593",
+   "id": "596cf7de",
    "metadata": {
     "scrolled": true
    },
@@ -265,8 +265,209 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='13610' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      9.72% [13610/140000 00:27<04:15 Sampling 4 chains, 0 divergences]\n",
+       "      <progress value='140000' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [140000/140000 04:10<00:00 Sampling 4 chains, 0 divergences]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sampling 4 chains for 5_000 tune and 30_000 draw iterations (20_000 + 120_000 draws total) took 278 seconds.\n",
+      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\arviz\\stats\\diagnostics.py:561: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  (between_chain_variance / within_chain_variance + num_samples - 1) / (num_samples)\n",
+      "The rhat statistic is larger than 1.4 for some parameters. The sampler did not converge.\n",
+      "The estimated number of effective samples is smaller than 200 for some parameters.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Change Point Guess 1.0\n",
+      "{'change_point_confidence': [1.0], 'mus': [(0.015946907939919052, 0.02106804894243832)], 'mu_diff': [0.005121141002519269], 'tau_map': ['2020-11-16'], 'tau_std': [83.06028907910209], 'entropy': [3.5897465139141462], 'change_point_guess': [1.0]}\n",
+      "appending\n",
+      "working on tendies\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\Documents\\GitHub\\ErdosInstitute\\ErdosInstitute-SIG_Project\\Automated\\ChangePointAnalysis\\BayesianMethods.py:134: FutureWarning: In v4.0, pm.sample will return an `arviz.InferenceData` object instead of a `MultiTrace` by default. You can pass return_inferencedata=True or return_inferencedata=False to be safe and silence this warning.\n",
+      "  trace = pm.sample(steps, tune=tune, step = step)\n",
+      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "CompoundStep\n",
+      ">Metropolis: [delta]\n",
+      ">Metropolis: [change_point_beta]\n",
+      ">Metropolis: [tau_beta]\n",
+      ">Metropolis: [beta_2]\n",
+      ">Metropolis: [alpha_2]\n",
+      ">Metropolis: [beta_1]\n",
+      ">Metropolis: [alpha_1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "        <style>\n",
+       "            /* Turns off some styling */\n",
+       "            progress {\n",
+       "                /* gets rid of default border in Firefox and Opera. */\n",
+       "                border: none;\n",
+       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "                background-size: auto;\n",
+       "            }\n",
+       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "                background: #F44336;\n",
+       "            }\n",
+       "        </style>\n",
+       "      <progress value='140000' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [140000/140000 04:01<00:00 Sampling 4 chains, 0 divergences]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sampling 4 chains for 5_000 tune and 30_000 draw iterations (20_000 + 120_000 draws total) took 269 seconds.\n",
+      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\arviz\\stats\\diagnostics.py:561: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  (between_chain_variance / within_chain_variance + num_samples - 1) / (num_samples)\n",
+      "The rhat statistic is larger than 1.4 for some parameters. The sampler did not converge.\n",
+      "The estimated number of effective samples is smaller than 200 for some parameters.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Change Point Guess 1.0\n",
+      "{'change_point_confidence': [1.0], 'mus': [(0.023083271051286654, 0.00982984773834383)], 'mu_diff': [-0.013253423312942825], 'tau_map': ['2021-01-24'], 'tau_std': [154.44433788550674], 'entropy': [2.9686336782663023], 'change_point_guess': [1.0]}\n",
+      "appending\n",
+      "working on nikola\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\Documents\\GitHub\\ErdosInstitute\\ErdosInstitute-SIG_Project\\Automated\\ChangePointAnalysis\\BayesianMethods.py:134: FutureWarning: In v4.0, pm.sample will return an `arviz.InferenceData` object instead of a `MultiTrace` by default. You can pass return_inferencedata=True or return_inferencedata=False to be safe and silence this warning.\n",
+      "  trace = pm.sample(steps, tune=tune, step = step)\n",
+      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "CompoundStep\n",
+      ">Metropolis: [delta]\n",
+      ">Metropolis: [change_point_beta]\n",
+      ">Metropolis: [tau_beta]\n",
+      ">Metropolis: [beta_2]\n",
+      ">Metropolis: [alpha_2]\n",
+      ">Metropolis: [beta_1]\n",
+      ">Metropolis: [alpha_1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "        <style>\n",
+       "            /* Turns off some styling */\n",
+       "            progress {\n",
+       "                /* gets rid of default border in Firefox and Opera. */\n",
+       "                border: none;\n",
+       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "                background-size: auto;\n",
+       "            }\n",
+       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "                background: #F44336;\n",
+       "            }\n",
+       "        </style>\n",
+       "      <progress value='140000' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [140000/140000 04:06<00:00 Sampling 4 chains, 0 divergences]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sampling 4 chains for 5_000 tune and 30_000 draw iterations (20_000 + 120_000 draws total) took 305 seconds.\n",
+      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\arviz\\stats\\diagnostics.py:561: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  (between_chain_variance / within_chain_variance + num_samples - 1) / (num_samples)\n",
+      "The rhat statistic is larger than 1.4 for some parameters. The sampler did not converge.\n",
+      "The estimated number of effective samples is smaller than 200 for some parameters.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Change Point Guess 1.0\n",
+      "{'change_point_confidence': [1.0], 'mus': [(0.0036109693179744635, 0.0017182841869011348)], 'mu_diff': [-0.0018926851310733287], 'tau_map': ['2020-12-02'], 'tau_std': [39.05097469894368], 'entropy': [3.303333275296777], 'change_point_guess': [1.0]}\n",
+      "appending\n",
+      "working on day\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\Documents\\GitHub\\ErdosInstitute\\ErdosInstitute-SIG_Project\\Automated\\ChangePointAnalysis\\BayesianMethods.py:134: FutureWarning: In v4.0, pm.sample will return an `arviz.InferenceData` object instead of a `MultiTrace` by default. You can pass return_inferencedata=True or return_inferencedata=False to be safe and silence this warning.\n",
+      "  trace = pm.sample(steps, tune=tune, step = step)\n",
+      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "CompoundStep\n",
+      ">Metropolis: [delta]\n",
+      ">Metropolis: [change_point_beta]\n",
+      ">Metropolis: [tau_beta]\n",
+      ">Metropolis: [beta_2]\n",
+      ">Metropolis: [alpha_2]\n",
+      ">Metropolis: [beta_1]\n",
+      ">Metropolis: [alpha_1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "        <style>\n",
+       "            /* Turns off some styling */\n",
+       "            progress {\n",
+       "                /* gets rid of default border in Firefox and Opera. */\n",
+       "                border: none;\n",
+       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "                background-size: auto;\n",
+       "            }\n",
+       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "                background: #F44336;\n",
+       "            }\n",
+       "        </style>\n",
+       "      <progress value='101275' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      72.34% [101275/140000 02:36<00:59 Sampling 4 chains, 0 divergences]\n",
        "    </div>\n",
        "    "
       ],
@@ -281,13 +482,13 @@
    "source": [
     "\n",
     "print('Computing the changepoints:')\n",
-    "ChangePointAnalysis.changepointanalysis([subreddit])\n"
+    "ChangePointAnalysis.changepointanalysis([subreddit], up_to = 3, daily_words = 2)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e4fbf7f",
+   "id": "1a50fabf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -295,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7cbbf6b",
+   "id": "d0aa513b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -303,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19ebbd4f",
+   "id": "e43e24e5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -311,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb81211f",
+   "id": "1106b7c0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -319,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b0640e8",
+   "id": "6a63de1e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -327,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f44a7d1",
+   "id": "d6729e26",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -335,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fa75aea",
+   "id": "b42f9515",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -343,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fff9d51a",
+   "id": "37f06f95",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -351,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42e8ee57",
+   "id": "b91343f2",
    "metadata": {},
    "outputs": [],
    "source": [
