--- a/Sandbox/Notebooks/ChangepointAnalysis/CultureShifts_Timeseries.ipynb
+++ b/Sandbox/Notebooks/ChangepointAnalysis/CultureShifts_Timeseries.ipynb
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "05c63eb3",
+   "id": "c8e0cd36",
    "metadata": {},
    "outputs": [
     {
@@ -2882,34 +2882,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "7219bd10",
+   "execution_count": 95,
+   "id": "2ecc63e2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0          6\n",
-       "1          0\n",
-       "2          5\n",
-       "3          1\n",
-       "4         11\n",
-       "          ..\n",
-       "960960    44\n",
-       "960961     2\n",
-       "960962     0\n",
-       "960963     0\n",
-       "960964     1\n",
-       "Name: ups, Length: 1260237, dtype: int64"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-95-434e15f4f33c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mwsb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0myear\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
     }
    ],
    "source": [
-    "wsb.ups"
+    "wsb.date.iloc[0].year()"
    ]
   },
   {
@@ -3023,7 +3013,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "77b113aa",
+   "id": "a0d3e526",
    "metadata": {},
    "outputs": [
     {
@@ -3052,7 +3042,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "82254e01",
+   "id": "8b7abaeb",
    "metadata": {},
    "outputs": [
     {
@@ -3174,7 +3164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d284635",
+   "id": "2e4e07e0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3182,7 +3172,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "14100376",
+   "id": "d8797b89",
    "metadata": {},
    "outputs": [
     {
@@ -3203,7 +3193,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "c1cfe45a",
+   "id": "a022a2c9",
    "metadata": {
     "scrolled": true
    },
@@ -3291,7 +3281,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "a38b741a",
+   "id": "58f40e73",
    "metadata": {
     "scrolled": true
    },
@@ -3323,7 +3313,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "7cf1bb42",
+   "id": "21fbc64c",
    "metadata": {
     "scrolled": true
    },
@@ -3358,7 +3348,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "8fcc8794",
+   "id": "bf4f2160",
    "metadata": {},
    "outputs": [
     {
